@@ -806,8 +806,9 @@ __int64 Editor::VMProcess(int OpCode,void *vParam,__int64 iParam)
 
 int Editor::ProcessKey(const Manager::Key& Key)
 {
-	auto LocalKey = Key.FarKey();
-	if (LocalKey==KEY_IDLE)
+	auto LocalKey = Key;
+	const auto LocalFarKey = Key.FarKey();
+	if (LocalFarKey==KEY_IDLE)
 	{
 		if (Global->Opt->ViewerEditorClock && HostFileEditor && HostFileEditor->IsFullScreen() && Global->Opt->EdOpt.ShowTitleBar)
 			ShowTime(FALSE);
@@ -815,10 +816,10 @@ int Editor::ProcessKey(const Manager::Key& Key)
 		return TRUE;
 	}
 
-	if (LocalKey==KEY_NONE)
+	if (LocalFarKey==KEY_NONE)
 		return TRUE;
 
-	switch (LocalKey)
+	switch (LocalFarKey)
 	{
 		case KEY_CTRLSHIFTUP:   case KEY_CTRLSHIFTNUMPAD8: LocalKey = KEY_SHIFTUP;   break;
 		case KEY_CTRLSHIFTDOWN:	case KEY_CTRLSHIFTNUMPAD2: LocalKey = KEY_SHIFTDOWN; break;
@@ -838,13 +839,13 @@ int Editor::ProcessKey(const Manager::Key& Key)
 	}
 
 	_KEYMACRO(CleverSysLog SL(L"Editor::ProcessKey()"));
-	_KEYMACRO(SysLog(L"Key=%s",_FARKEY_ToName(LocalKey)));
+	_KEYMACRO(SysLog(L"Key=%s",_FARKEY_ToName(LocalFarKey)));
 	int CurPos=m_it_CurLine->GetCurPos();
 	int CurVisPos=GetLineCurPos();
-	int isk = IsShiftKey(LocalKey);
-	int ick = (LocalKey==KEY_CTRLC || LocalKey==KEY_RCTRLC || LocalKey==KEY_CTRLINS || LocalKey==KEY_CTRLNUMPAD0 || LocalKey==KEY_RCTRLINS || LocalKey==KEY_RCTRLNUMPAD0);
-	int imk = ((unsigned int)LocalKey >= KEY_MACRO_BASE && (unsigned int)LocalKey <= KEY_MACRO_ENDBASE);
-	int ipk = ((unsigned int)LocalKey >= KEY_OP_BASE && (unsigned int)LocalKey <= KEY_OP_ENDBASE);
+	int isk = IsShiftKey(LocalFarKey);
+	int ick = (LocalFarKey==KEY_CTRLC || LocalFarKey==KEY_RCTRLC || LocalFarKey==KEY_CTRLINS || LocalFarKey==KEY_CTRLNUMPAD0 || LocalFarKey==KEY_RCTRLINS || LocalFarKey==KEY_RCTRLNUMPAD0);
+	int imk = ((unsigned int)LocalFarKey >= KEY_MACRO_BASE && (unsigned int)LocalFarKey <= KEY_MACRO_ENDBASE);
+	int ipk = ((unsigned int)LocalFarKey >= KEY_OP_BASE && (unsigned int)LocalFarKey <= KEY_OP_ENDBASE);
 
 	_SVS(SysLog(L"[%d] isk=%d",__LINE__,isk));
 
@@ -888,7 +889,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 					KEY_CTRLS,     KEY_RCTRLS,
 				};
 
-				if (std::find(ALL_CONST_RANGE(UnmarkKeys), LocalKey) != std::cend(UnmarkKeys))
+				if (std::find(ALL_CONST_RANGE(UnmarkKeys), LocalFarKey) != std::cend(UnmarkKeys))
 				{
 					UnmarkBlock();
 				}
@@ -907,25 +908,25 @@ int Editor::ProcessKey(const Manager::Key& Key)
 		}
 	}
 
-	if (LocalKey==KEY_ALTD || LocalKey==KEY_RALTD)
+	if (LocalFarKey==KEY_ALTD || LocalFarKey==KEY_RALTD)
 		LocalKey=KEY_CTRLK;
 
 	// работа с закладками
-	if (LocalKey>=KEY_CTRL0 && LocalKey<=KEY_CTRL9)
-		return GotoBookmark(LocalKey-KEY_CTRL0);
+	if (LocalFarKey>=KEY_CTRL0 && LocalFarKey<=KEY_CTRL9)
+		return GotoBookmark(LocalFarKey-KEY_CTRL0);
 
-	if (LocalKey>=KEY_CTRLSHIFT0 && LocalKey<=KEY_CTRLSHIFT9)
-		LocalKey=LocalKey-KEY_CTRLSHIFT0+KEY_RCTRL0;
+	if (LocalFarKey>=KEY_CTRLSHIFT0 && LocalFarKey<=KEY_CTRLSHIFT9)
+		LocalKey=LocalFarKey-KEY_CTRLSHIFT0+KEY_RCTRL0;
 
-	if (LocalKey>=KEY_RCTRL0 && LocalKey<=KEY_RCTRL9)
-		return SetBookmark(LocalKey-KEY_RCTRL0);
+	if (LocalFarKey>=KEY_RCTRL0 && LocalFarKey<=KEY_RCTRL9)
+		return SetBookmark(LocalFarKey-KEY_RCTRL0);
 
 	intptr_t SelStart=0,SelEnd=0;
 	int SelFirst=FALSE;
 	int SelAtBeginning=FALSE;
 	EditorBlockGuard _bg(*this,&Editor::UnmarkEmptyBlock);
 
-	switch (LocalKey)
+	switch (LocalFarKey)
 	{
 		case KEY_SHIFTLEFT:      case KEY_SHIFTRIGHT:
 		case KEY_SHIFTUP:        case KEY_SHIFTDOWN:
@@ -988,7 +989,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 		}
 	}
 
-	switch (LocalKey)
+	switch (LocalFarKey)
 	{
 		case KEY_CTRLSHIFTPGUP:   case KEY_CTRLSHIFTNUMPAD9:
 		case KEY_RCTRLSHIFTPGUP:  case KEY_RCTRLSHIFTNUMPAD9:
@@ -1003,7 +1004,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 				ProcessKey(Manager::Key(KEY_SHIFTPGUP));
 			}
 
-			if (LocalKey == KEY_CTRLSHIFTHOME || LocalKey == KEY_CTRLSHIFTNUMPAD7 || LocalKey == KEY_RCTRLSHIFTHOME || LocalKey == KEY_RCTRLSHIFTNUMPAD7)
+			if (LocalFarKey == KEY_CTRLSHIFTHOME || LocalFarKey == KEY_CTRLSHIFTNUMPAD7 || LocalFarKey == KEY_RCTRLSHIFTHOME || LocalFarKey == KEY_RCTRLSHIFTNUMPAD7)
 				ProcessKey(Manager::Key(KEY_SHIFTHOME));
 
 			Pasting--;
@@ -1024,7 +1025,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 				ProcessKey(Manager::Key(KEY_SHIFTPGDN));
 			}
 
-			if (LocalKey == KEY_CTRLSHIFTEND || LocalKey == KEY_CTRLSHIFTNUMPAD1 || LocalKey == KEY_RCTRLSHIFTEND || LocalKey == KEY_RCTRLSHIFTNUMPAD1)
+			if (LocalFarKey == KEY_CTRLSHIFTEND || LocalFarKey == KEY_CTRLSHIFTNUMPAD1 || LocalFarKey == KEY_RCTRLSHIFTEND || LocalFarKey == KEY_RCTRLSHIFTNUMPAD1)
 				ProcessKey(Manager::Key(KEY_SHIFTEND));
 
 			Pasting--;
@@ -1547,13 +1548,13 @@ int Editor::ProcessKey(const Manager::Key& Key)
 
 				Pasting++;
 				bool OldUseInternalClipboard=Clipboard::SetUseInternalClipboardState(true);
-				ProcessKey(Manager::Key((LocalKey==KEY_CTRLP || LocalKey==KEY_RCTRLP) ? KEY_CTRLINS:KEY_SHIFTDEL));
+				ProcessKey(Manager::Key((LocalFarKey==KEY_CTRLP || LocalFarKey==KEY_RCTRLP) ? KEY_CTRLINS:KEY_SHIFTDEL));
 
 				/* $ 10.04.2001 SVS
 				  ^P/^M - некорректно работали: условие для CurPos должно быть ">=",
 				   а не "меньше".
 				*/
-				if ((LocalKey == KEY_CTRLM || LocalKey == KEY_RCTRLM) && CurSelStart != -1 && CurSelEnd != -1)
+				if ((LocalFarKey == KEY_CTRLM || LocalFarKey == KEY_RCTRLM) && CurSelStart != -1 && CurSelEnd != -1)
 				{
 					if (CurPos >= CurSelEnd)
 						m_it_CurLine->SetCurPos(CurPos - (CurSelEnd - CurSelStart));
@@ -1840,7 +1841,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 		case(KEY_MSWHEEL_UP | KEY_ALT):
 		case(KEY_MSWHEEL_UP | KEY_RALT):
 		{
-			int Roll = (LocalKey & (KEY_ALT|KEY_RALT))?1:(int)Global->Opt->MsWheelDeltaEdit;
+			int Roll = (LocalFarKey & (KEY_ALT|KEY_RALT))?1:(int)Global->Opt->MsWheelDeltaEdit;
 
 			for (int i=0; i<Roll; i++)
 				ProcessKey(Manager::Key(KEY_CTRLUP));
@@ -1851,7 +1852,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 		case(KEY_MSWHEEL_DOWN | KEY_ALT):
 		case(KEY_MSWHEEL_DOWN | KEY_RALT):
 		{
-			int Roll = (LocalKey & (KEY_ALT|KEY_RALT))?1:(int)Global->Opt->MsWheelDeltaEdit;
+			int Roll = (LocalFarKey & (KEY_ALT|KEY_RALT))?1:(int)Global->Opt->MsWheelDeltaEdit;
 
 			for (int i=0; i<Roll; i++)
 				ProcessKey(Manager::Key(KEY_CTRLDOWN));
@@ -1862,7 +1863,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 		case(KEY_MSWHEEL_LEFT | KEY_ALT):
 		case(KEY_MSWHEEL_LEFT | KEY_RALT):
 		{
-			int Roll = (LocalKey & (KEY_ALT|KEY_RALT))?1:(int)Global->Opt->MsHWheelDeltaEdit;
+			int Roll = (LocalFarKey & (KEY_ALT|KEY_RALT))?1:(int)Global->Opt->MsHWheelDeltaEdit;
 
 			for (int i=0; i<Roll; i++)
 				ProcessKey(Manager::Key(KEY_LEFT));
@@ -1873,7 +1874,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 		case(KEY_MSWHEEL_RIGHT | KEY_ALT):
 		case(KEY_MSWHEEL_RIGHT | KEY_RALT):
 		{
-			int Roll = (LocalKey & (KEY_ALT|KEY_RALT))?1:(int)Global->Opt->MsHWheelDeltaEdit;
+			int Roll = (LocalFarKey & (KEY_ALT|KEY_RALT))?1:(int)Global->Opt->MsHWheelDeltaEdit;
 
 			for (int i=0; i<Roll; i++)
 				ProcessKey(Manager::Key(KEY_RIGHT));
@@ -1926,7 +1927,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 				int StartPos=m_it_CurLine->GetTabCurPos();
 				m_it_TopScreen = m_it_CurLine = FirstLine();
 
-				if (LocalKey == KEY_CTRLHOME || LocalKey == KEY_RCTRLHOME || LocalKey == KEY_CTRLNUMPAD7 || LocalKey == KEY_RCTRLNUMPAD7)
+				if (LocalFarKey == KEY_CTRLHOME || LocalFarKey == KEY_RCTRLHOME || LocalFarKey == KEY_CTRLNUMPAD7 || LocalFarKey == KEY_RCTRLNUMPAD7)
 				{
 					m_it_CurLine->SetCurPos(0);
 					m_it_CurLine->SetLeftPos(0);
@@ -1956,7 +1957,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 
 				m_it_CurLine->SetLeftPos(0);
 
-				if (LocalKey == KEY_CTRLEND || LocalKey == KEY_RCTRLEND || LocalKey == KEY_CTRLNUMPAD1 || LocalKey == KEY_RCTRLNUMPAD1)
+				if (LocalFarKey == KEY_CTRLEND || LocalFarKey == KEY_RCTRLEND || LocalFarKey == KEY_CTRLNUMPAD1 || LocalFarKey == KEY_RCTRLNUMPAD1)
 				{
 					m_it_CurLine->SetCurPos(m_it_CurLine->GetLength());
 					m_it_CurLine->FastShow();
@@ -2110,7 +2111,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 			if (!m_Flags.Check(FEDITOR_LOCKMODE))
 			{
 				Lock();
-				Undo(LocalKey==KEY_CTRLSHIFTZ || LocalKey==KEY_RCTRLSHIFTZ);
+				Undo(LocalFarKey==KEY_CTRLSHIFTZ || LocalFarKey==KEY_RCTRLSHIFTZ);
 				Unlock();
 				Show();
 			}
@@ -2624,8 +2625,8 @@ int Editor::ProcessKey(const Manager::Key& Key)
 		default:
 		{
 			{
-				if ((LocalKey==KEY_CTRLDEL || LocalKey==KEY_RCTRLDEL || LocalKey==KEY_CTRLNUMDEL || LocalKey==KEY_RCTRLNUMDEL
-					|| LocalKey==KEY_CTRLDECIMAL || LocalKey==KEY_RCTRLDECIMAL || LocalKey==KEY_CTRLT || LocalKey==KEY_RCTRLT)
+				if ((LocalFarKey==KEY_CTRLDEL || LocalFarKey==KEY_RCTRLDEL || LocalFarKey==KEY_CTRLNUMDEL || LocalFarKey==KEY_RCTRLNUMDEL
+					|| LocalFarKey==KEY_CTRLDECIMAL || LocalFarKey==KEY_RCTRLDECIMAL || LocalFarKey==KEY_CTRLT || LocalFarKey==KEY_RCTRLT)
 					&& CurPos>=m_it_CurLine->GetLength())
 				{
 					/*$ 08.12.2000 skv
@@ -2640,7 +2641,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 				}
 
 				if (!Pasting && !EdOpt.PersistentBlocks && IsStreamSelection())
-					if (IsCharKey(LocalKey))
+					if (IsCharKey(LocalFarKey))
 					{
 						DeleteBlock();
 						/* $ 19.09.2002 SKV
@@ -2653,22 +2654,22 @@ int Editor::ProcessKey(const Manager::Key& Key)
 						Show();
 					}
 
-				int SkipCheckUndo=(LocalKey==KEY_RIGHT      || LocalKey==KEY_NUMPAD6      ||
-				                   LocalKey==KEY_CTRLLEFT   || LocalKey==KEY_CTRLNUMPAD4  ||
-				                   LocalKey==KEY_RCTRLLEFT  || LocalKey==KEY_RCTRLNUMPAD4 ||
-				                   LocalKey==KEY_CTRLRIGHT  || LocalKey==KEY_CTRLNUMPAD6  ||
-				                   LocalKey==KEY_RCTRLRIGHT || LocalKey==KEY_RCTRLNUMPAD6 ||
-				                   LocalKey==KEY_HOME       || LocalKey==KEY_NUMPAD7      ||
-				                   LocalKey==KEY_END        || LocalKey==KEY_NUMPAD1      ||
-				                   LocalKey==KEY_CTRLS      || LocalKey==KEY_RCTRLS);
+				int SkipCheckUndo=(LocalFarKey==KEY_RIGHT      || LocalFarKey==KEY_NUMPAD6      ||
+				                   LocalFarKey==KEY_CTRLLEFT   || LocalFarKey==KEY_CTRLNUMPAD4  ||
+				                   LocalFarKey==KEY_RCTRLLEFT  || LocalFarKey==KEY_RCTRLNUMPAD4 ||
+				                   LocalFarKey==KEY_CTRLRIGHT  || LocalFarKey==KEY_CTRLNUMPAD6  ||
+				                   LocalFarKey==KEY_RCTRLRIGHT || LocalFarKey==KEY_RCTRLNUMPAD6 ||
+				                   LocalFarKey==KEY_HOME       || LocalFarKey==KEY_NUMPAD7      ||
+				                   LocalFarKey==KEY_END        || LocalFarKey==KEY_NUMPAD1      ||
+				                   LocalFarKey==KEY_CTRLS      || LocalFarKey==KEY_RCTRLS);
 
 				if (m_Flags.Check(FEDITOR_LOCKMODE) && !SkipCheckUndo)
 					return TRUE;
 
-				if (LocalKey == KEY_HOME || LocalKey == KEY_NUMPAD7)
+				if (LocalFarKey == KEY_HOME || LocalFarKey == KEY_NUMPAD7)
 					m_Flags.Set(FEDITOR_NEWUNDO);
 
-				if ((LocalKey==KEY_CTRLLEFT || LocalKey==KEY_RCTRLLEFT || LocalKey==KEY_CTRLNUMPAD4 || LocalKey==KEY_RCTRLNUMPAD4) && !m_it_CurLine->GetCurPos())
+				if ((LocalFarKey==KEY_CTRLLEFT || LocalFarKey==KEY_RCTRLLEFT || LocalFarKey==KEY_CTRLNUMPAD4 || LocalFarKey==KEY_RCTRLNUMPAD4) && !m_it_CurLine->GetCurPos())
 				{
 					Pasting++;
 					ProcessKey(Manager::Key(KEY_LEFT));
@@ -2686,8 +2687,8 @@ int Editor::ProcessKey(const Manager::Key& Key)
 					return TRUE;
 				}
 
-				if (((!EdOpt.CursorBeyondEOL && (LocalKey==KEY_RIGHT || LocalKey==KEY_NUMPAD6))
-					|| LocalKey==KEY_CTRLRIGHT || LocalKey==KEY_RCTRLRIGHT || LocalKey==KEY_CTRLNUMPAD6 || LocalKey==KEY_RCTRLNUMPAD6) &&
+				if (((!EdOpt.CursorBeyondEOL && (LocalFarKey==KEY_RIGHT || LocalFarKey==KEY_NUMPAD6))
+					|| LocalFarKey==KEY_CTRLRIGHT || LocalFarKey==KEY_RCTRLRIGHT || LocalFarKey==KEY_CTRLNUMPAD6 || LocalFarKey==KEY_RCTRLNUMPAD6) &&
 				        m_it_CurLine->GetCurPos()>=m_it_CurLine->GetLength() &&
 				        !IsLastLine(m_it_CurLine))
 				{
@@ -2722,7 +2723,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 
 				intptr_t LocalCurPos = m_it_CurLine->GetCurPos();
 
-				if (IsCharKey(LocalKey) && LocalCurPos>0 && !Length)
+				if (IsCharKey(LocalFarKey) && LocalCurPos>0 && !Length)
 				{
 					auto PrevLine = m_it_CurLine == Lines.begin()? Lines.end() : std::prev(m_it_CurLine);
 
@@ -2778,7 +2779,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 					CmpStr.assign(Str, Length);
 				}
 
-				if (LocalKey == KEY_OP_XLAT)
+				if (LocalFarKey == KEY_OP_XLAT)
 				{
 					Xlat();
 					Show();
@@ -2793,7 +2794,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 				//AY: Это что бы при FastShow LeftPos не становился в конец строки.
 				m_it_CurLine->SetRightCoord(XX2);
 
-				if (m_it_CurLine->ProcessKey(Manager::Key(LocalKey)))
+				if (m_it_CurLine->ProcessKey(LocalKey))
 				{
 					intptr_t CurSelStart, CurSelEnd;
 
@@ -2802,7 +2803,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 					  в начале строки, и нажимаем tab, который заменяется
 					  на пробелы, выделение съедет. Это фикс.
 					*/
-					if (LocalKey==KEY_TAB && GetConvertTabs() && IsStreamSelection() && m_it_AnyBlockStart != m_it_CurLine)
+					if (LocalFarKey==KEY_TAB && GetConvertTabs() && IsStreamSelection() && m_it_AnyBlockStart != m_it_CurLine)
 					{
 						m_it_CurLine->GetSelection(CurSelStart, CurSelEnd);
 						m_it_CurLine->Select(CurSelStart==-1?-1:0,CurSelEnd);
@@ -2824,7 +2825,7 @@ int Editor::ProcessKey(const Manager::Key& Key)
 
 					// <Bug 794>
 					// обработаем только первую и последнюю строку с блоком
-					if ((LocalKey == KEY_CTRLK || LocalKey == KEY_RCTRLK) && EdOpt.PersistentBlocks)
+					if ((LocalFarKey == KEY_CTRLK || LocalFarKey == KEY_RCTRLK) && EdOpt.PersistentBlocks)
 					{
 						if (m_it_CurLine == m_it_AnyBlockStart)
 						{
