@@ -1,4 +1,8 @@
-﻿drkns 16.12.2015 20:53:34 +0200 - build 4476
+﻿zg 16.12.2015 22:53:06 +0200 - build 4477
+
+1. assert при вводе alt-65536 в редакторе.
+
+drkns 16.12.2015 20:53:34 +0200 - build 4476
 
 1. И ещё одно уточнение 4473.
 
